--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-  <!--Footer Start-->
+ <!--Footer Start-->
   <footer id="footer">
     <div class="fpart-first">
       <div class="container">
@@ -7,7 +7,7 @@
             <img alt="" class="img-responsive" src="assets/image/logo-small.png">
           </div>
           <div class="column col-lg-3 col-md-3 col-sm-3 col-xs-12">
-            <h5>Contactanos</h5>
+            <h5>Contáctanos</h5>
             <table>
               <tr>
                   <td><a href=""><i style="font-size: 28px;" class="fa fa-facebook-square" aria-hidden="true"></i></a></td>
@@ -22,7 +22,7 @@
             <ul>
               <li><a href="#">Preguntas frecuentes</a></li>
               <li><a href="#">Términos y condiciones</a></li>
-              <li><a href="#">Copyright información acá</a></li>
+
             </ul>
           </div>
           <div class="column col-lg-31   col-md-3 col-sm-3 col-xs-12">
