--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -20,8 +20,8 @@
           <div class="column col-lg-3 col-md-3 col-sm-3 col-xs-12">
 
             <ul>
-              <li><a href="#">Preguntas frecuentes</a></li>
-              <li><a href="#">Términos y condiciones</a></li>
+              <li><a routerLink="/preguntas">Preguntas frecuentes</a></li>
+              <li><a routerLink="/terminos">Términos y condiciones</a></li>
 
             </ul>
           </div>
