se suben cambios de login y registro

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -39,7 +39,7 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
                   </div>
 
                   <button (click)="btnBuscarClick(1)" type="button" class="btn btn-default bremsen btn-lg">BUSCAR</button>
-                    <div class="pad-12">&nbsp;</div>
+                    <div style="height: 11px">&nbsp;</div>
                 </div>
 
 
@@ -63,8 +63,8 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
                   </div>
 
                   <button type="button" (click)="btnBuscarClick(2)" class="btn btn-default bremsen btn-lg"><b>BUSCAR</b></button>
+                   <div style="height: 11px">&nbsp;</div>
                 </div>
-                 <div class="pad-15">&nbsp;</div>
               </div>
 
 
@@ -220,7 +220,7 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
                   </div>
 
                   <div class="product-thumb">
-                    <div class="image"><a href="product.html"><img src="image/product/540x576.jpg" alt="FinePix S8400W Long Zoom Camera" title="FinePix S8400W Long Zoom Camera" class="img-responsive" /></a></div>
+                    <div class="image"><a href="product.html"><img src="assets/image/product/540x576.jpg" alt="FinePix S8400W Long Zoom Camera" title="FinePix S8400W Long Zoom Camera" class="img-responsive" /></a></div>
                     <div class="caption">
                        <h4><a href="producto.html">Marca - Modelo</a></h4>
                       <p class="price"> $12,000 </p>
