se agrega sesion de usuario

--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -28,46 +28,16 @@
 <div class="container">
             <div class="pad-50">&nbsp;</div>
 
-    <div class="row">
-            <div class="col-sm-4">
-              <div class="feature-box well" style="background: #F2F2F2;">
-                <div class="feature-content">
-                  <h4>Nombre</h4>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
+          <!-- Brand Logo Carousel Start-->
+          <div id="carousel" class="owl-carousel nxt">
+            <div class="item text-center"><img src="assets/image/testimonio-01.jpg" alt="" class="img-responsive" /></div>
+            <div class="item text-center"><img src="assets/image/testimonio-02.jpg" alt="" class="img-responsive" /></div>
+            <div class="item text-center"><img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" /></div>
+            <div class="item text-center"><img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" /></div>
 
-                  <p>Lorem ipsum dolor sit amet, con sectetuer adipiscing elit. Donec eros tellus, scelerisqu nec, rhonc us eget, sollicitudin eu.</p>
-                 </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="feature-box well"  style="background: #F2F2F2;">
-                <div class="feature-content">
-                  <h4>Nombre</h4>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <p>Lorem ipsum dolor sit amet, con sectetuer adipiscing elit. Donec eros tellus, scelerisqu nec, rhonc us eget, sollicitudin eu.</p>
-                 </div>
-              </div>
-            </div>
+            <div class="item text-center"><img src="assets/image/testimonio-04.jpg" alt="" class="img-responsive" /></div>
+            <div class="item text-center"><img src="assets/image/testimonio-05.jpg" alt="" class="img-responsive" /></div>
+            <div class="item text-center"><img src="assets/image/testimonio-06.jpg" alt="" class="img-responsive" /></div>
+          </div>
 
-             <div class="col-sm-4">
-              <div class="feature-box well"  style="background: #F2F2F2;">
-                <div class="feature-content">
-                  <h4>Nombre</h4>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <p>Lorem ipsum dolor sit amet, con sectetuer adipiscing elit. Donec eros tellus, scelerisqu nec, rhonc us eget, sollicitudin eu.</p>
-                 </div>
-              </div>
-            </div>
-
-
-      </div>
   </div>
