se agrega sesion de usuario 2

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -90,7 +90,7 @@
         	<div class="col-md-5">
         			<div id="cart">
               <button type="button" class="heading " style="  padding-right: 15px;">
-              <span id="cart-total"><small><a routerLink="/misdatos" style="color: #fff;">Hola César Tapia Rosales  / Cambiar mis datos</a></small></span></button>
+              <span id="cart-total"><small><a routerLink="/misdatos" style="color: #fff;">Hola {{nombreCliente}}  / Cambiar mis datos </a><a (click)="logout()" style="color: #fff;"> / Cerrar sesión</a></small></span></button>
 
             </div>
         	</div>
