--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -130,12 +130,12 @@
                   <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
             <label for="username">Email</label>
             <input type="text" class="form-control" name="username" [(ngModel)]="model.username" #username="ngModel" required />
-            <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
+            <div *ngIf="f.submitted && !username.valid" class="help-block">Usuario es requerido</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
             <label for="password">Password</label>
             <input type="password" class="form-control" name="password" [(ngModel)]="model.password" #password="ngModel" required />
-            <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
+            <div *ngIf="f.submitted && !password.valid" class="help-block">Password es requerido</div>
         </div>
                       <table class="table" style="margin-bottom: 0px !important;">
                         <tr>
